# rebi

./: Cargo.toml  PKGBUILD  README.md  flake.nix  nixos-module.nix  rebi.desktop  shell.nix
gui/: Cargo.toml
gui/src/: config.rs  main.rs
helper/: Cargo.toml
helper/src/: main.rs
polkit/: org.rebi.policy  org.rebi.rules
